--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
 <body>
 
 <h1>This is a Heading</h1>
-<p>This is a pargraph.</p>
-<p>Loogikatehete operandideks on tõeväärtused (0 ja 1) ja tulemuseks on
-samuti tõeväärtus. Seega loogikatehted "töötlevad tõeväärtusi uuteks
-tõeväärtusteks".
-Lausearvutuses kasutatakse ühte unaarset (ühe operandiga) ja nelja
-binaarset (kahe operandiga) tehet.
-Kui A ja B on suvalised lausearvutuslaused alternatiivsete tõeväärtustega
-0 või 1 , siis nendevaheliste loogikatehete tulemuseks olevate liitlausete
-tõeväärtused on järgnevad:.</p>
+<p>This is a paragraph.</p>
 
 </body>
 </html>
