--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
 <title>Page Title</title>
 </head>
 <body>
+ <style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
+</head>
+<body>
 
 <h1>Veebileht</h1>
-<h2>Martikli number: 205981</h2>
+<h3>Martikli number: 205981</h3>
 <p>This is a paragraph.</p>
+  
+ <table>
+  <tr>
+    <th>Month</th>
+    <th>Savings</th>
+  </tr>
+  <tr>
+    <td>January</td>
+    <td>$100</td>
+  </tr>
+  <tr>
+    <td>February</td>
+    <td>$80</td>
+  </tr>
+</table>
+  
 
 </body>
 </html>
