--- a/index.html
+++ b/index.html
@@ -13,23 +13,45 @@ table, th, td {
 <body>
 
 <h1>Veebileht</h1>
-<h3>Martikli number: 205981</h3>
-<p>This is a paragraph.</p>
+
+<a href="https://taltech.ee/">TALTECH</a>
+
+
   
- <table>
+<table>
   <tr>
-    <th>Month</th>
-    <th>Savings</th>
+    <th>Martikli number</th>
+    <th>Eriala kood</th>
   </tr>
   <tr>
-    <td>January</td>
-    <td>$100</td>
+    <td>205981</td>
+    <td>IACB</td>
   </tr>
-  <tr>
-    <td>February</td>
-    <td>$80</td>
-  </tr>
+  
 </table>
+  
+<p>Somebody once told me the world is gonna roll me
+I ain't the sharpest tool in the shed
+She was looking kind of dumb with her finger and her thumb
+In the shape of an "L" on her forehead
+Well, the years start coming and they don't stop coming
+Fed to the rules and I hit the ground running
+Didn't make sense not to live for fun
+Your brain gets smart but your head gets dumb
+So much to do, so much to see
+So what's wrong with taking the backstreets?
+You'll never know if you don't go
+You'll never shine if you don't glow
+Hey now, you're an all star
+Get your game on, go play
+Hey now, you're a rock star
+Get the show on, get paid
+And all that glitters is gold
+Only shooting stars break the mold.</p>
+
+<img src="https://www.ebearstore.com/media/catalog/product/cache/8d2ef458f36aa28e8549123698af5859/s/t/steiff-355431-shrek.jpg" alt="W3Schools.com" style="width:300px;height:300px;">
+
+
   
 
 </body>
